// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload dir-to-uss handler process method should override .zosattributes content with --attributes content 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "/somedir/test_dir",
      "success": true,
      "to": "USS_dir",
    },
    Object {
      "from": "testfrom",
      "success": false,
      "to": "testto",
    },
    Object {
      "from": "dummy",
      "success": undefined,
      "to": "nowhere",
    },
  ],
  "commandResponse": "uploaded",
  "success": false,
}
`;

exports[`Upload dir-to-uss handler process method should override .zosattributes content with --attributes content 2`] = `""`;

exports[`Upload dir-to-uss handler process method should override .zosattributes content with --attributes content 3`] = `
"
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded"
`;

exports[`Upload dir-to-uss handler process method should pass attributes when a .zosattributes file is present 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "/somedir/test_dir",
      "success": true,
      "to": "USS_dir",
    },
    Object {
      "from": "testfrom",
      "success": false,
      "to": "testto",
    },
    Object {
      "from": "dummy",
      "success": undefined,
      "to": "nowhere",
    },
  ],
  "commandResponse": "uploaded",
  "success": false,
}
`;

exports[`Upload dir-to-uss handler process method should pass attributes when a .zosattributes file is present 2`] = `""`;

exports[`Upload dir-to-uss handler process method should pass attributes when a .zosattributes file is present 3`] = `
"
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded"
`;

exports[`Upload dir-to-uss handler process method should upload a directory to a USS directory if requested 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "/somedir/test_dir",
      "success": true,
      "to": "USS_dir",
    },
    Object {
      "from": "testfrom",
      "success": false,
      "to": "testto",
    },
    Object {
      "from": "dummy",
      "success": undefined,
      "to": "nowhere",
    },
  ],
  "commandResponse": "uploaded",
  "success": false,
}
`;

exports[`Upload dir-to-uss handler process method should upload a directory to a USS directory if requested 2`] = `""`;

exports[`Upload dir-to-uss handler process method should upload a directory to a USS directory if requested 3`] = `
"
[32m- [39m
  [33msuccess: [39m[32mtrue[39m
  [33mfrom: [39m   /somedir/test_dir
  [33mto: [39m     USS_dir
[32m- [39m
  [33msuccess: [39m[31mfalse[39m
  [33mfrom: [39m   testfrom
  [33mto: [39m     testto
[32m- [39m
  [33mfrom: [39mdummy
  [33mto: [39m  nowhere


uploaded"
`;
